--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Food Planner</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="splachText">Let us help you discover the best food</string>
+    <string name="WelcomeBack">Welcome Back</string>
+    <string name="login">LogIn</string>
+    <string name="google">Google</string>
+    <string name="haventAccount">don\'t have account ?</string>
+    <string name="createAccount">Creating Account</string>
+    <string name="signUP">SignUP</string>
+    <string name="haveAccount">already have account?</string>
 </resources>
