--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="splach1">Need help with choosing your delicious meal?!</string>
     <string name="next">Next</string>
     <string name="skip">Skip</string>
+    <string name="splach2">Know the ingredients of the meal and how  to do it with us</string>
 </resources>
