--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="next">Next</string>
     <string name="skip">Skip</string>
     <string name="splach2">Know the ingredients of the meal and how  to do it with us</string>
+    <string name="splach3">Do your own plane for a week and add your favourite meals in one place</string>
 </resources>
