--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="cat">Categories</string>
+    <string name="guest">"You Cann't see favourite meals as your are guest TO see them please </string>
 </resources>
